5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1585_2895.log
== TEST (2019-03-21 11:31:30) 
-- CODE:
jogo = int(input("Quantos jogos serão comprados?"))
var = float(input("Quanto custa cada jogo?"))
frete = float(input("Qual o preço do frete?"))

total = ((jogo * var) + frete)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:32:34) 
-- CODE:
jogo = int(input("Quantos jogos serão comprados? "))
var = float(input("Quanto custa cada jogo? "))
frete = float(input("Qual o preço do frete? "))

total = ((jogo * var) + frete)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:14) 
-- CODE:
qnt = int(input("Quantos jogos serão comprados? "))
var = float(input("Quanto custa cada jogo? "))
frete = float(input("Qual o preço do frete? "))

total = ((jogo * var) + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = ((jogo * var) + frete)
NameError: name 'jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:34) 
-- CODE:
qnt = float(input("Quantos jogos serão comprados? "))
val = float(input("Quanto custa cada jogo? "))
frete = float(input("Qual o preço do frete? "))

total = ((jogo * var) + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = ((jogo * var) + frete)
NameError: name 'jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:35) 
-- CODE:
qnt = int(input("Quantos jogos serao comprados? "))
val = float(input("Quanto custa cada jogo? "))
frete = float(input("Qual o preço do frete? "))

total = ((jogo * var) + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = ((jogo * var) + frete)
NameError: name 'jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:59) 
-- CODE:
qnt = int(input("Quantos jogos serao comprados? "))
val = float(input("Quanto custa cada jogo? "))
frete = float(input("Qual o preco do frete? "))

total = ((jogo * var) + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = ((jogo * var) + frete)
NameError: name 'jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:24) 
-- CODE:
qnt = int(input("Quantos jogos serao comprados? "))
val = float(input("Quanto custa cada jogo? "))
frete = float(input("Qual o preco do frete? "))

total = ((qnt * val) + frete)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:40:35) 
-- CODE:
qnt = int(input("Quantos jogos serao comprados? "))
val = float(input("Quanto custa cada jogo? "))
frete = float(input("Qual o preco do frete? "))

total = ((qnt * val) + frete)
print(total)
-- EXECUTION TIME:
0.160104
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
